vlib/v/checker/tests/prefix_err.vv
b := &true
_ := &10
_ := &"Hi"
_ := &"${b}"
_ := &`c`
_ := 12.3

a := 1
_ = *a
a <- 4

_ = ~true
_ = !4
